# Squirrel

./: .gitignore  CMakeLists.txt  README.md  build-and-test.sh
benchmark/: CMakeLists.txt  allocator.bm.cpp  argument.bm.cpp  cache.bm.cpp  string.bm.cpp
docs/: memory-management.md  memory.md  namespaces.md
include/: sql_memory.h
include/abi/: vtable.h
include/async/: future.h
include/compiler/: types.h  vtable.h
include/container/: queue.h  safe_queue.h  vector.h
include/functional/: function.h
include/memory/: _allocator_impl.h  allocator.h  allocator_utils.h  block.h  destroy.h  reclaimer.h  smart_pointer.h  utility.h
include/metaprogramming/: attribute.h  cast.h  hash.h  tuple.h  types.h
include/string/: string.h
include/thread/: thread.h  threadpool.h
src/abi/: vtable.cpp
src/compiler/: types.cpp  vtable.cpp
src/memory/: _allocator_impl.cpp  _block.c  allocator.cpp  allocator_utils.c  allocator_utils.cpp  block.c  reclaimer.cpp  utility.cpp
src/string/: string.cpp
src/thread/: threadpool.cpp
t/: 01-memory-allocator.t.cpp  01-shared-ptr.t.cpp  02-shared-pointer.t.cpp  03-string-basic.t.cpp  04-threadpool.t.cpp  05-tuple.t.cpp  06-check-attribute.t.cpp  06-types.t.cpp  07-vector.t.cpp  08-queue.t.cpp  09-safe-queue.t.cpp  CMakeLists.txt  abi-vtable.t.cpp  destroy.t.cpp  dyn-cast.t.cpp  function.t.cpp  future.t.cpp  itanium-vtable.t.cpp  memory-allocator-impl.t.cpp  memory-allocator.t.cpp  memory-block.t.cpp  memory-utils.t.cpp  queue.t.cpp  safe-queue.t.cpp  smart-pointer.t.cpp  string-basic.t.cpp  testconfig.h.in  thread.t.cpp  threadpool.t.cpp  tuple.t.cpp  types.t.cpp  vector.t.cpp
